Fix card overlapping sticky nav bug

--- a/src/_includes/css/base.css
+++ b/src/_includes/css/base.css
@@ -743,7 +743,6 @@ section {
   padding: 0;
   display: flex;
   position: relative;
-  z-index: 1;
 }
 
 .profile-card__picture {
